--- a/index.html
+++ b/index.html
@@ -1,8 +1,10 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
+
 <head>
     <title>Conversor de Unidades</title>
     <link rel="stylesheet" type="text/css" href="style.css">
+    <script src="script.js"></script>
 </head>
 <body>
     <h1>Conversor de Unidades</h1>
@@ -34,6 +36,6 @@
 
     <div id="resultado"></div>
 
-    <script src="script.js"></script>
+    
 </body>
 </html>
