--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
+    <meta charset="utf-8">
     <title>Conversor de Unidades</title>
     <link rel="stylesheet" type="text/css" href="style.css">
     <script src="script.js"></script>
