--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <script src="script.js"></script>
 </head>
 <body>
-    <h1>Conversor de Unidades</h1>
+    <h1>Conversor de Unidades Binary</h1>
 
     <div>
         <label for="valor">Valor:</label>
